Bug 941559 - Invalidate nsDislaySolidColor display items when their color changes. r=roc, a=lsblakk